apps/obsidian/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: obsidian-api-stripprefix
  namespace: obsidian
spec:
  stripPrefix:
    prefixes:
      - /api
