apps/obsidian/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: obsidian
  labels:
    app: obsidian
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: https
    port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: obsidian
