apps/obsidian/ingress-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian-api
  namespace: obsidian
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: obsidian-obsidian-api-stripprefix@kubernetescrd
  labels:
    app: obsidian
spec:
  ingressClassName: traefik
  rules:
  - host: <path:obsidian-config#domain>
    http:
      paths:
      - backend:
          service:
            name: obsidian
            port:
              number: 27123
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - <path:obsidian-config#domain>
    secretName: tls-obsidian-ingress
